--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-redux": "^7.2.4",
     "react-responsive-combo-box": "^1.2.6",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "redux-persist": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
