--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "expense-tracker",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@chakra-ui/react": "^1.6.6",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "axios": "^0.21.1",
     "framer-motion": "^4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-query": "^3.21.1",
     "react-redux": "^7.2.4",
-    "react-responsive-combo-box": "^1.2.7",
+    "react-responsive-combo-box": "^1.2.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux-persist": "^6.0.0"
