--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@emotion/styled": "^11",
     "axios": "^0.21.1",
     "framer-motion": "^4",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.2.0",
     "react-query": "^3.21.1",
     "react-redux": "^7.2.4",
